Fix related gap

--- a/src/styles/_related.scss
+++ b/src/styles/_related.scss
@@ -26,7 +26,7 @@
     height: 50px;
     left: 0;
     right: 0;
-    top: -50px;
+    top: -45px;
     padding: none;
     z-index: -1;
   }
